// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`insert-below insert row at the bottom of the 4x4 table 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "leaves": Array [
              Object {
                "marks": Array [],
                "object": "leaf",
                "text": "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum",
              },
            ],
            "object": "text",
          },
        ],
        "object": "block",
        "type": "paragraph",
      },
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "data": Object {
                  "colspan": "4",
                },
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "0",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
            ],
            "object": "block",
            "type": "table_row",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "1",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "2",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "3",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {
                  "rowspan": 3,
                },
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "4",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
            ],
            "object": "block",
            "type": "table_row",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "5",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "6",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "7",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
            ],
            "object": "block",
            "type": "table_row",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "8",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "9",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "10",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
            ],
            "object": "block",
            "type": "table_row",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": " ",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": " ",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": " ",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": " ",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
            ],
            "object": "block",
            "type": "table_row",
          },
        ],
        "object": "block",
        "type": "table",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`insert-below insert row at the bottom of the 4x4 table 2`] = `"<p style=\\"margin:0\\">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p><table><tbody><tr><td colSpan=\\"4\\" style=\\"width:auto\\"></td></tr><tr><td style=\\"width:auto\\"></td><td style=\\"width:auto\\"></td><td style=\\"width:auto\\"></td><td rowspan=\\"3\\" style=\\"width:auto\\"></td></tr><tr><td style=\\"width:auto\\"></td><td style=\\"width:auto\\"></td><td style=\\"width:auto\\"></td></tr><tr><td style=\\"width:auto\\"></td><td style=\\"width:auto\\"></td><td style=\\"width:auto\\"></td></tr><tr><td style=\\"width:auto\\"></td><td style=\\"width:auto\\"></td><td style=\\"width:auto\\"></td><td style=\\"width:auto\\"></td></tr></tbody></table>"`;

exports[`insert-below insert row at the top of the 4x4 table 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "leaves": Array [
              Object {
                "marks": Array [],
                "object": "leaf",
                "text": "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum",
              },
            ],
            "object": "text",
          },
        ],
        "object": "block",
        "type": "paragraph",
      },
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "data": Object {
                  "colspan": "4",
                },
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "0",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
            ],
            "object": "block",
            "type": "table_row",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": " ",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": " ",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": " ",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": " ",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
            ],
            "object": "block",
            "type": "table_row",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "1",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "2",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "3",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {
                  "rowspan": 3,
                },
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "4",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
            ],
            "object": "block",
            "type": "table_row",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "5",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "6",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "7",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
            ],
            "object": "block",
            "type": "table_row",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "8",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "9",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "10",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
            ],
            "object": "block",
            "type": "table_row",
          },
        ],
        "object": "block",
        "type": "table",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`insert-below insert row at the top of the 4x4 table 2`] = `"<p style=\\"margin:0\\">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p><table><tbody><tr><td colSpan=\\"4\\" style=\\"width:auto\\"></td></tr><tr><td style=\\"width:auto\\"></td><td style=\\"width:auto\\"></td><td style=\\"width:auto\\"></td><td style=\\"width:auto\\"></td></tr><tr><td style=\\"width:auto\\"></td><td style=\\"width:auto\\"></td><td style=\\"width:auto\\"></td><td rowspan=\\"3\\" style=\\"width:auto\\"></td></tr><tr><td style=\\"width:auto\\"></td><td style=\\"width:auto\\"></td><td style=\\"width:auto\\"></td></tr><tr><td style=\\"width:auto\\"></td><td style=\\"width:auto\\"></td><td style=\\"width:auto\\"></td></tr></tbody></table>"`;

exports[`insert-below insert row to bottom of 2X2 table 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "leaves": Array [
              Object {
                "marks": Array [],
                "object": "leaf",
                "text": "Lorem ipsum ...",
              },
            ],
            "object": "text",
          },
        ],
        "object": "block",
        "type": "paragraph",
      },
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "0",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "1",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
            ],
            "object": "block",
            "type": "table_row",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "2",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "3",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
            ],
            "object": "block",
            "type": "table_row",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": " ",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": " ",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
            ],
            "object": "block",
            "type": "table_row",
          },
        ],
        "object": "block",
        "type": "table",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`insert-below insert row to bottom of 2X2 table 2`] = `"<p style=\\"margin:0\\">Lorem ipsum ...</p><table><tbody><tr><td style=\\"width:auto\\"></td><td style=\\"width:auto\\"></td></tr><tr><td style=\\"width:auto\\"></td><td style=\\"width:auto\\"></td></tr><tr><td style=\\"width:auto\\"></td><td style=\\"width:auto\\"></td></tr></tbody></table>"`;

exports[`insert-below insert row to top of 2X2 table 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "leaves": Array [
              Object {
                "marks": Array [],
                "object": "leaf",
                "text": "Lorem ipsum ...",
              },
            ],
            "object": "text",
          },
        ],
        "object": "block",
        "type": "paragraph",
      },
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "0",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "1",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
            ],
            "object": "block",
            "type": "table_row",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": " ",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": " ",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
            ],
            "object": "block",
            "type": "table_row",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "2",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "3",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
            ],
            "object": "block",
            "type": "table_row",
          },
        ],
        "object": "block",
        "type": "table",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`insert-below insert row to top of 2X2 table 2`] = `"<p style=\\"margin:0\\">Lorem ipsum ...</p><table><tbody><tr><td style=\\"width:auto\\"></td><td style=\\"width:auto\\"></td></tr><tr><td style=\\"width:auto\\"></td><td style=\\"width:auto\\"></td></tr><tr><td style=\\"width:auto\\"></td><td style=\\"width:auto\\"></td></tr></tbody></table>"`;
